--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,51 @@
-<h1><%= t('.sign_up') %></h1>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= bootstrap_devise_error_messages! %>
+      <h1><%= t('.sign_up') %></h1>
 
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
-  </div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= bootstrap_devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :password %>
-    <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+      </div>
 
-    <% if @minimum_password_length %>
-      <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
+      <div class="form-group">
+        <%= f.label :password %>
+        <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
+
+        <% if @minimum_password_length %>
+          <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
+        <% end %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
+      </div>
+      <%= fields_for( :tenant ) do |w| %>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <%= w.label :name, 'Organization' %>
+          <!-- <span class='description'>(Unique name for your group or organization for the new account)</span> -->
+          <%= w.text_field :name, required: true, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= w.label :plan %>
+          <%= w.select :plan, options_for_select(Plan.options, params[:plan]),{}, required: true, class: "form-control" %>
+        </div>
+      </div>
+
     <% end %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
-  </div>
-  <%= fields_for( :tenant ) do |w| %>
-  <div class="form-group  no-left-padding">
-  <%= w.label :name, 'Organization' %>
-  <span class='description'>(Unique name for your group or organization for the new account)</span>
-  <%= w.text_field :name, required: true, class: "form-control" %>
-  </div>
-  <div class="form-group no-right-padding">
-  <%= w.label :plan %>
-  <%= w.select :plan, options_for_select(Plan.options, params[:plan]),{}, required: true, class: "form-control" %>
-  </div>
+    <div class="form-group">
+      <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
+    </div>
   <% end %>
-  <div class="form-group">
-    <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
-  </div>
-<% end %>
 
-<%= render 'devise/shared/links' %>
+  <%= render 'devise/shared/links' %>
+
+</div>
+</div>
+</div>
