updated views for invites of new memebers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,6 @@
 
             </li>
 
-
-
             <li class="nav-item logout"><%= link_to('Logout', destroy_user_session_path, class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %></li>
 
           <% else %>
@@ -35,6 +33,15 @@
             <li class="nav-item">
 
               <%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>
+
+            </li>
+
+          <% end %>
+          <% if current_user %>
+
+            <li>
+
+              <%= link_to "<i class='fa fa-users'></i> Add Members".html_safe, new_member_path, class: 'navbar-link btn btn-primary' %>
 
             </li>
 
