--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -1,7 +1,7 @@
 <%= bootstrap_devise_error_messages! %>
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4>Create Password</h4>
+    <h4 class="copy copy-header">Create Password</h4>
   </div>
   <div class="panel-body">
     <%= form_for(resource, :as => resource_name, :url => update_user_confirmation_path, :html => { :method => :put, :class => "form login" }) do |f| %>
