--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -2,7 +2,7 @@
 
   <div class="page-header">
 
-    <h1><%=t '.title', :default => [:'helpers.titles.new', 'Invite New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+    <h1 class="copy copy-header"><%=t '.title', :default => [:'helpers.titles.new', 'Invite New %{model}'], :model => model_class.model_name.human.titleize %></h1>
 
   </div>
 
