--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
 
-      <h1><%= t('.sign_up') %></h1>
+      <h1 class="copy copy-header"><%= t('.sign_up') %></h1>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= bootstrap_devise_error_messages! %>
