--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Holla!</a>
+      <%= link_to('Holla', root_path, class: 'navbar-brand', title: 'brand') %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto">
           <% if current_user %>
 
             <li class="nav-item active user-name">
@@ -32,8 +32,12 @@
 
             <li class="nav-item">
 
-              <%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>
+              <%= link_to('Sign In', new_user_session_path, class: 'nav-link', title: 'Sign In') %>
 
+            </li>
+            <li class="nav-item">
+
+              <%= link_to('Sign Up - Its Free!', new_user_registration_path, class: 'btn btn-primary', title: 'Sign Up') %>
             </li>
 
           <% end %>
