--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,10 @@
 body {
   font-family: 'Open Sans', sans-serif;
 
+  .navbar {
+    margin-bottom: 35px;
+  }
+
   .navbar-brand {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
