--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,23 @@
-<h1 class="copy copy-header"><%= t('.resend_unlock_instructions') %></h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
 
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= bootstrap_devise_error_messages! %>
+      <h1 class="copy copy-header"><%= t('.resend_unlock_instructions') %></h1>
 
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+      <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+      <%= bootstrap_devise_error_messages! %>
+
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit t('.resend_unlock_instructions'), class: 'btn btn-primary'%>
+      </div>
+    <% end %>
+
+    <%= render 'devise/shared/links' %>
   </div>
-
-  <div class="form-group">
-    <%= f.submit t('.resend_unlock_instructions'), class: 'btn btn-primary'%>
-  </div>
-<% end %>
-
-<%= render 'devise/shared/links' %>
+</div>
+</div>
