building teams and orgs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,11 @@
 
           <% else %>
 
+          <li class="nav-item">
+
+            <%= link_to('Pricing', new_user_session_path, class: 'nav-link', title: 'Pricing') %>
+
+          </li>
             <li class="nav-item">
 
               <%= link_to('Sign In', new_user_session_path, class: 'nav-link', title: 'Sign In') %>
