--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,127 +1,148 @@
-<section id="cta-main">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1 class="copy copy-header copy-header-h1">Meetings done right</h1>
-        <%= link_to('Sign Up - Its Free!', new_user_registration_path, class: 'btn btn-primary', title: 'Sign Up') %>
-      </div>
-    </div>
-  </div>
-
-</section>
-<section id="intro">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="copy copy-header copy-header-h2">We make good teams
-          <b>great</b>
-        </h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <h3 class="copy copy-header copy-header-h3">Feature 1</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div class="col-md-4">
-        <h3 class="copy copy-header copy-header-h3">Feature 2</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div class="col-md-4">
-        <h3 class="copy copy-header copy-header-h3">Feature 3</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-    </div>
-  </div>
-
-</section>
-<section id="testimonial">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="copy copy-header copy-header-h2">Quotes from
-          <b>Happy Customers</b>
-        </h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-          esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <span class="testimonial-name">Company 1</span>
-      </div>
-      <div class="col-md-6">
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-          esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <span class="testimonial-name">Company 2</span>
-      </div>
-      <div class="col-md-6">
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-          esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <span class="testimonial-name">Company 3</span>
-      </div>
-      <div class="col-md-6">
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-          esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <span class="testimonial-name">Company 4</span>
-      </div>
-    </div>
-  </div>
-
-</section>
-<section id="cta-final">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="copy copy-header copy-header-h2">
-          What are you waiting for?
-        </h2>
-        <p>Get started in 30 seconds</p>
-        <%= link_to('Sign Up - Its Free!', new_user_registration_path, class: 'btn btn-primary', title: 'Sign Up') %>
-      </div>
-    </div>
-
-  </div>
-
-</section>
-<section id="footer">
+<% if current_user %>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-3">
-        <ul>
-          <li>Lorem</li>
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <ul>
-          <li>Lorem</li>
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <ul>
-          <li>Lorem</li>
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <ul>
-          <li>Lorem</li>
-        </ul>
+      <div class="col-md-12">
+        <h3>Dashboard:
+          <%= @tenant.name %></h3>
+        <% if current_user %>
+
+          <li>
+
+            <%= link_to "<i class='fa fa-users'></i> Add Members".html_safe, new_member_path, class: 'navbar-link btn btn-primary' %>
+
+          </li>
+
+        <% end %>
       </div>
     </div>
   </div>
-</section>
+
+<% else %>
+  <section id="cta-main">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="copy copy-header copy-header-h1">Meetings done right</h1>
+          <%= link_to('Sign Up - Its Free!', new_user_registration_path, class: 'btn btn-primary', title: 'Sign Up') %>
+        </div>
+      </div>
+    </div>
+
+  </section>
+  <section id="intro">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="copy copy-header copy-header-h2">We make good teams
+            <b>great</b>
+          </h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <h3 class="copy copy-header copy-header-h3">Feature 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-md-4">
+          <h3 class="copy copy-header copy-header-h3">Feature 2</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-md-4">
+          <h3 class="copy copy-header copy-header-h3">Feature 3</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+  <section id="testimonial">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="copy copy-header copy-header-h2">Quotes from
+            <b>Happy Customers</b>
+          </h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <span class="testimonial-name">Company 1</span>
+        </div>
+        <div class="col-md-6">
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <span class="testimonial-name">Company 2</span>
+        </div>
+        <div class="col-md-6">
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <span class="testimonial-name">Company 3</span>
+        </div>
+        <div class="col-md-6">
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <span class="testimonial-name">Company 4</span>
+        </div>
+      </div>
+    </div>
+
+  </section>
+  <section id="cta-final">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="copy copy-header copy-header-h2">
+            What are you waiting for?
+          </h2>
+          <p>Get started in 30 seconds</p>
+          <%= link_to('Sign Up - Its Free!', new_user_registration_path, class: 'btn btn-primary', title: 'Sign Up') %>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+  <section id="footer">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3">
+          <ul>
+            <li>Lorem</li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <ul>
+            <li>Lorem</li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <ul>
+            <li>Lorem</li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <ul>
+            <li>Lorem</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+<% end %>
