--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
                 Dropdown link
               </a>
 
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
                 <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe, edit_user_registration_path, title: 'Edit Profile', class: 'dropdown-item' %>
                 <%= link_to('Logout', destroy_user_session_path, class: 'btn btn-xs btn-danger', title: 'Logout', class: 'dropdown-item', :method => :delete) %>
                 <a class="dropdown-item" href="#">Something else here</a>
@@ -34,7 +34,7 @@
 
           <% else %>
 
-            <li class="nav-item"></li>
+
             <li class="nav-item">
 
               <%= link_to('Sign In', new_user_session_path, class: 'nav-link', title: 'Sign In') %>
@@ -42,7 +42,7 @@
             </li>
             <li class="nav-item">
 
-              <%= link_to('Sign Up - Its Free!', new_user_registration_path, class: 'btn btn-primary', title: 'Sign Up') %>
+              <%= link_to('Sign Up - Its Free!', new_user_registration_path, class: 'btn btn-primary btn-signup', title: 'Sign Up') %>
             </li>
 
           <% end %>
