--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,22 +5,27 @@
       <div class="row">
         <div class="col-md-12">
           <h3>Dashboard:</h3>
-        <p> <%= @tenant.name %></p>
-
+          <p>
+            <%= @tenant.name %></p>
         </div>
       </div>
       <div class="row">
-<div class="col-md-2 offset-md-10">
-  <% if current_user %>
+        <div class="col-md-2 offset-md-10">
+          <% if current_user %>
 
-    <li>
+            <li>
 
-      <%= link_to "<i class='fa fa-users'></i> Add Members".html_safe, new_member_path, class: 'navbar-link btn btn-primary' %>
+              <%= link_to "<i class='fa fa-users'></i> Add Members".html_safe, new_member_path, class: 'navbar-link btn btn-primary' %>
 
-    </li>
+            </li>
 
-  <% end %>
-</div>
+          <% end %>
+        </div>
+      </div>
+      <div class="row">
+        <% if current_user %>
+          <%= render 'projects/list' %>
+        <% end %>
       </div>
     </div>
   </main>
