--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -6,53 +6,64 @@
 
   </div>
 
-  <table class="table table-striped">
+  <% if @projects.size > 0 %>
 
-    <thead>
+    <table class="table table-striped">
 
-      <tr>
-
-        <th><%= model_class.human_attribute_name(:title) %></th>
-
-        <th><%= model_class.human_attribute_name(:details) %></th>
-
-        <th><%= model_class.human_attribute_name(:expected_completion_date) %></th>
-
-        <th><%=t '.actions', :default => t("helpers.actions") %></th>
-
-      </tr>
-
-    </thead>
-
-    <tbody>
-
-      <% @projects.each do |project| %>
+      <thead>
 
         <tr>
 
-          <td><%= link_to project.title, tenant_project_path(project, tenant_id: @tenant.id), class: 'main-link' %></td>
+          <th><%= model_class.human_attribute_name(:title) %></th>
 
-          <td><%= project.details %></td>
+          <th><%= model_class.human_attribute_name(:details) %></th>
 
-          <td><%= project.expected_completion_date %></td>
+          <th><%= model_class.human_attribute_name(:expected_completion_date) %></th>
 
-          <td>
-
-            <%= link_to t('.edit', :default => t("helpers.links.edit")), edit_tenant_project_path(project, tenant_id: @tenant.id), :class => 'btn btn-default btn-xs' %>
-
-            <%= link_to 'Edit Users', users_tenant_project_path(project, tenant_id: @tenant.id), :class => 'btn btn-default btn-xs' %>
-
-            <%= link_to t('.destroy', :default => t("helpers.links.destroy")), tenant_project_path(project, tenant_id: @tenant.id), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-            :class => 'btn btn-xs btn-danger' %>
-
-          </td>
+          <th><%=t '.actions', :default => t("helpers.actions") %></th>
 
         </tr>
 
-      <% end %>
+      </thead>
 
-    </tbody>
+      <tbody>
 
-  </table>
+        <% @projects.each do |project| %>
 
-  <%= link_to 'New Project', new_tenant_project_path(tenant_id: @tenant.id), :class => 'btn btn-primary' %>
+          <tr>
+
+            <td><%= link_to project.title, tenant_project_path(project, tenant_id: @tenant.id), class: 'main-link' %></td>
+
+            <td><%= project.details %></td>
+
+            <td><%= project.expected_completion_date %></td>
+
+            <td>
+
+              <%= link_to t('.edit', :default => t("helpers.links.edit")), edit_tenant_project_path(project, tenant_id: @tenant.id), :class => 'btn btn-default btn-xs' %>
+
+              <%= link_to 'Edit Users', users_tenant_project_path(project, tenant_id: @tenant.id), :class => 'btn btn-default btn-xs' %>
+
+              <%= link_to t('.destroy', :default => t("helpers.links.destroy")), tenant_project_path(project, tenant_id: @tenant.id), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-xs btn-danger' %>
+
+            </td>
+
+          </tr>
+
+        <% end %>
+
+      </tbody>
+
+    </table>
+
+  <% else %>
+    <p class="lead">You don't have any projects</p>
+
+  <% end %>
+
+  <% if (@tenant.can_create_projects?) %>
+
+    <%= link_to 'New Project', new_tenant_project_path(tenant_id: @tenant.id), :class => 'btn btn-primary' %>
+
+  <% end %>
