--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -40,12 +40,15 @@
 
             <td>
 
-              <%= link_to t('.edit', :default => t("helpers.links.edit")), edit_tenant_project_path(project, tenant_id: @tenant.id), :class => 'btn btn-default btn-xs' %>
+              <% if (@tenant.can_create_projects?) %>
 
-              <%= link_to 'Edit Users', users_tenant_project_path(project, tenant_id: @tenant.id), :class => 'btn btn-default btn-xs' %>
+  <%= link_to 'New Project',
 
-              <%= link_to t('.destroy', :default => t("helpers.links.destroy")), tenant_project_path(project, tenant_id: @tenant.id), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-xs btn-danger' %>
+  new_tenant_project_path(tenant_id: @tenant.id),
+
+  :class => 'btn btn-primary' %>
+
+  <% end %>
 
             </td>
 
