--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Project</h1>
-
-<%= render 'form', project: @project %>
-
-<%= link_to 'Back', projects_path %>
+<div class="container">
+    <div class="row">
+        <%- model_class = Project -%>
+        <div class="page-header">
+            <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+        </div>
+        <%= render :partial => 'form' %>
+    </div>
+</div>
