--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,20 +12,24 @@
       <div class="row">
         <div class="col-md-2 offset-md-10">
           <% if current_user %>
+            <ul class="helper-list">
 
-            <li>
+              <li>
 
-              <%= link_to "<i class='fa fa-users'></i> Add Members".html_safe, new_member_path, class: 'navbar-link btn btn-primary' %>
+                <%= link_to "<i class='fa fa-users'></i>".html_safe, new_member_path, class: 'navbar-link btn btn-primary add-members-link' %>
 
-            </li>
-
+              </li>
+            </ul>
           <% end %>
         </div>
       </div>
       <div class="row">
-        <% if current_user %>
-          <%= render 'projects/list' %>
-        <% end %>
+
+        <div class="col-md-12">
+          <% if current_user %>
+            <%= render 'projects/list' %>
+          <% end %>
+        </div>
       </div>
     </div>
   </main>
