--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -1,65 +1,40 @@
 <%- model_class = Project -%>
 
-  <div class="page-header">
+  <div class="col-md-3 project-entry-wrap">
+    <h3>Future</h3>
 
-    <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+    <% if @projects.size > 0 %>
+      <% @projects.each do |project| %>
+        <div class="row">
+          <%= link_to tenant_project_path(project, tenant_id: @tenant.id), :class => 'project-single-entry-link' do %>
+          <div class="col-md-12 project-single-entry">
+            <div class="row">
+              <div class="col-md-6">
+                <p>priority</p>
+              </div>
+              <div class="col-md-2"></div>
+              <div class="col-md-4">
+                <p>12 Sep</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <h4></h4>
+                <p><%= project.title %></p>
+              </div>
+            </div>
+          </div>
+        <% end %>
+        <% if (@tenant.can_create_projects?) %>
 
-  </div>
-
-  <% if @projects.size > 0 %>
-
-    <table class="table table-striped">
-
-      <thead>
-
-        <tr>
-
-          <th><%= model_class.human_attribute_name(:title) %></th>
-
-          <th><%= model_class.human_attribute_name(:details) %></th>
-
-          <th><%= model_class.human_attribute_name(:expected_completion_date) %></th>
-
-          <th><%=t '.actions', :default => t("helpers.actions") %></th>
-
-        </tr>
-
-      </thead>
-
-      <tbody>
-
-        <% @projects.each do |project| %>
-
-          <tr>
-
-            <td><%= link_to project.title, tenant_project_path(project, tenant_id: @tenant.id), class: 'main-link' %></td>
-
-            <td><%= project.details %></td>
-
-            <td><%= project.expected_completion_date %></td>
-
-            <td>
-
-              <% if (@tenant.can_create_projects?) %>
-
-  <%= link_to 'New Project',
-
-  new_tenant_project_path(tenant_id: @tenant.id),
-
-  :class => 'btn btn-primary' %>
-
-  <% end %>
-
-            </td>
-
-          </tr>
+          <%= link_to 'New Project', new_tenant_project_path(tenant_id: @tenant.id), :class => 'btn btn-primary' %>
 
         <% end %>
+      </div>
 
-      </tbody>
+      <!-- <td><%= project.details %></td> <td><%= project.expected_completion_date %></td> -->
 
-    </table>
-
+    <% end %>
   <% else %>
     <p class="lead">You don't have any projects</p>
 
