--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
             <%= @tenant.name %></p>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="members-list">
         <div class="col-md-2 offset-md-10">
           <% if current_user %>
             <ul class="helper-list">
