--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -12,9 +12,13 @@
               <div class="col-md-6">
                 <p>priority</p>
               </div>
-              <div class="col-md-2"></div>
-              <div class="col-md-4">
-                <p>12 Sep</p>
+
+              <div class="col-md-6">
+                <ul class="project-single-entry-ul">
+                  <li>
+                    <span id="clock-icon"></span></li>
+                  <li>12 Sept</li>
+                </ul>
               </div>
             </div>
             <div class="row">
